tests/errors/string_repeat_string.experr
can only repeat String by an Integer
